--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "start": "webpack serve --env port=3000",
+    "build": "webpack",
+    "build:prod": "webpack --env mode=production",
+    "build:dev" : "webpack --env mode=development"
   },
   "keywords": [],
   "author": "",
