--- a/package.json
+++ b/package.json
@@ -102,6 +102,9 @@
     "react-router-dom": "^6.2.1"
   },
   "loki": {
+    "look-same": {
+      "ignoreCaret": true
+    },
     "configurations": {
       "chrome.laptop": {
         "target": "chrome.docker",
