--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,17 @@ jobs:
         run: npm install
       - name: Build production project
         run: npm run build:prod
+        if: always()
       - name: Linting typescript
         run: npm run lint:ts
+        if: always()
       - name: Linting css
         run: npm run lint:scss
+        if: always()
       - name: Unit testing
         run: npm run test:unit
       - name: Build storybook
         run: npm run storybook:build
+        if: always()
       - name: Screenshot testing
         run: npm run test:ui:ci
