--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:dev:server": "node ./json-server/index.js",
     "build": "webpack",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
@@ -20,7 +21,8 @@
     "test:ui:json": "node scripts/generate-visual-json-report.js",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "storybook:build": "build-storybook -c ./config/storybook"
+    "storybook:build": "build-storybook -c ./config/storybook",
+    "json:server": "json-server --watch ./json-server/db.json --port=8000"
   },
   "keywords": [],
   "author": "",
@@ -98,6 +100,7 @@
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
+    "jsonwebtoken": "^9.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
